--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.application.name=DiMo_S1
 #DATABASE
 #--------------------------------------------------------------------------------------------------------------------------------
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url = jdbc:mysql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?useSSL=false&allowPublicKeyRetrival=true
+spring.datasource.url = jdbc:mysql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?createDatabaseIfNotExist=true
 spring.datasource.dbname =${DATABASE_NAME}
 spring.datasource.username =${DATABASE_USERNAME}
 spring.datasource.password =${DATABASE_PASSWORD}
@@ -17,3 +17,5 @@ spring.datasource.initialization-mode=always
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 #--------------------------------------------------------------------------------------------------------------------------------
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.disable-swagger-default-url=true
