--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,9 @@ spring.application.name=DiMo_S1
 #DATABASE
 #--------------------------------------------------------------------------------------------------------------------------------
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url = jdbc:mysql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?createDatabaseIfNotExist=true
-spring.datasource.dbname =${DATABASE_NAME}
-spring.datasource.username =${DATABASE_USERNAME}
-spring.datasource.password =${DATABASE_PASSWORD}
+spring.datasource.url = jdbc:mysql://${DATABASE_HOST:localhost}:${DATABASE_PORT:3306}/${DATABASE_NAME:squad1}?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username =${DATABASE_USERNAME:root}
+spring.datasource.password =${DATABASE_PASSWORD:123456}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
