--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.application.name=DiMo_S1
 #DATABASE
 #--------------------------------------------------------------------------------------------------------------------------------
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url = jdbc:mysql://${DATABASE_HOST:localhost}:${DATABASE_PORT:3306}/${DATABASE_NAME:dimo}?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url = jdbc:mysql://${DATABASE_HOST:localhost}:${DATABASE_PORT:3306}/${DATABASE_NAME:dimo}?createDatabaseIfNotExist=true
 spring.datasource.username =${DATABASE_USERNAME:root}
 spring.datasource.password =${DATABASE_PASSWORD:Ab70827082}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
